--- a/src/styles/background.css
+++ b/src/styles/background.css
@@ -1,11 +1,12 @@
 .bg {
   position: fixed;
-  top: -10;
-  left: -10;
+  top: -50;
+  left: -50;
   height: 110%;
   width: 110%;
   background-position: center;
   background-size: cover;
   filter: blur(30px);
   -webkit-filter: blur(30px);
+  transition: all 1s ease-in-out;
 }
