--- a/src/styles/background.css
+++ b/src/styles/background.css
@@ -1,7 +1,7 @@
 .bg {
   position: fixed;
-  top: -50;
-  left: -50;
+  top: -50px;
+  left: -50px;
   height: 110%;
   width: 110%;
   background-position: center;
