--- a/src/styles/cover.css
+++ b/src/styles/cover.css
@@ -2,10 +2,12 @@
   scale: 1.04;
   translate: 0px 3px;
   transition: all 1s ease-in-out;
+  box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.2);
 
   &:hover {
     scale: 1;
     translate: 0px 2px;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
   }
 
   user-select: none;
