--- a/src/styles/table.css
+++ b/src/styles/table.css
@@ -8,11 +8,15 @@
 }
 
 #meta-table tr td:nth-child(1) {
-  width: 20%;
+  width: 25%;
   padding-left: 10px;
 }
 
 #meta-table tr td:nth-child(3) {
   text-align: center;
   width: 15%;
+}
+
+.alt-row {
+  font-size: 14px;
 }
