--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -4,3 +4,11 @@
   display: flex;
   justify-content: center;
 }
+
+.card-container {
+  min-width: 300px;
+  transition: all .3s ease;
+  &:hover{
+    scale: 1.05;
+  }
+}
