--- a/src/styles/background.css
+++ b/src/styles/background.css
@@ -9,6 +9,7 @@
   filter: blur(30px);
   -webkit-filter: blur(30px);
   transition: all 1s ease-in-out;
+  z-index: 0;
 }
 
 .overlay {
@@ -21,4 +22,5 @@
   background-position: center;
   opacity: 0.5;
   transition: all .5s ease-in-out;
+  z-index: 0;
 }
