--- a/src/styles/cover.css
+++ b/src/styles/cover.css
@@ -1,4 +1,4 @@
-#album-cover {
+.album-cover {
   /* scale: 1.04; */
   translate: 0px 3px;
   transition: all 1s ease-in-out;
@@ -11,4 +11,26 @@
   }
 
   user-select: none;
+}
+
+.album-cover-container {
+  position: relative;
+  padding: 0px;
+  transition: all .5s ease-in-out;
+}
+
+.header-title {
+  translate: 0px -5px;
+  transition: translate 0.5s ease-in-out, font-size 0.5s ease-in-out;
+  /* Specify transition for translate only */
+}
+
+@media screen and (min-width: 600px) {
+  .album-cover-container {
+    padding: 35px;
+  }
+
+  .header-title {
+    translate: 0px -25px;
+  }
 }
