--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -6,6 +6,16 @@
   transition: all 0.3s ease;
 }
 
+@media screen and (max-width: 500px) {
+  .card {
+    scale: 0.8;
+  }
+  .card-container {
+    padding: 0;
+  }
+  
+}
+
 .card-container {
   min-width: 300px;
   transition: all 0.3s ease;
