--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,6 +9,16 @@ body {
   background-attachment: fixed;
 }
 
+.main-container {
+  max-width: 800px;
+}
+
+@media screen and (max-width: 1000px) {
+  .main-container {
+    max-width: 700px;
+  }
+}
+
 .alert {
   position: fixed;
   bottom: 5%;
