--- a/src/styles/table.css
+++ b/src/styles/table.css
@@ -7,6 +7,11 @@
   padding: 10px 0;
 }
 
+#meta-table tr.expandable-row td {
+  padding: 0 0;
+  transition: all .5s ease-in-out;
+}
+
 #meta-table tr td:nth-child(1) {
   width: 25%;
   min-width: 125px;
@@ -16,8 +21,27 @@
 #meta-table tr td:nth-child(3) {
   text-align: center;
   width: 15%;
+  padding: 0 10px;
 }
 
 .alt-row {
   font-size: 14px;
+}
+
+@media screen and (max-width: 650px) {
+  #meta-table tr.expandable-row td {
+    padding: 10px 0;
+  }
+
+  #meta-table tr td:nth-child(1) {
+    width: 25%;
+    min-width: 125px;
+    padding: 0px 10px 0px 10px;
+  }
+
+  #meta-table tr td:nth-child(3) {
+    text-align: center;
+    width: 15%;
+    padding: 0 10px;
+  }
 }
