--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -1,9 +1,24 @@
-.card {
-  max-width: 350px;
-  aspect-ratio: 16/9;
+.card-container {
+  width: 375px;
+  transition: all 0.5s ease-in-out;
   display: flex;
   justify-content: center;
-  transition: all 0.3s ease;
+}
+
+@media screen and (max-width: 1200px) {
+  .card-container {
+    width: 335px;
+    padding: 0;
+    scale: 0.9;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .card-container {
+    width: 375px;
+    scale: 1;
+    padding: 0.75rem;
+  }
 }
 
 @media screen and (max-width: 500px) {
@@ -14,14 +29,22 @@
   .card-container {
     padding: 0;
   }
-
 }
 
-.card-container {
-  min-width: 300px;
+.card {
+  max-width: 350px;
+  aspect-ratio: 16/9;
+  display: flex;
+  justify-content: center;
   transition: all 0.3s ease;
 
   &:hover {
     scale: 1.05;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .card:hover {
+    scale: 0.88;
   }
 }
